// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseList - empty 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item__message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={4000}
      createdAt={0}
      description="Gas bill"
      id="1"
      key="1"
      note="Utilities"
    />
    <ExpenseListItem
      amount={125}
      createdAt={-345600000}
      description="Gum"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={225}
      createdAt={345600000}
      description="Coffee"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
